# storage/api-docs/api-docs.json
@@ -24,443 +24,6 @@
     ],
     "paths": {
         "/": {},
-        "/department/{departmentId}": {
-            "put": {
-                "tags": [
-                    "Department"
-                ],
-                "summary": "更新部門資料",
-                "description": "更新部門資料",
-                "operationId": "5b735ec13395ec7e0f8c634fab74836a",
-                "parameters": [
-                    {
-                        "name": "DepartmentId",
-                        "in": "path",
-                        "description": "部門ID",
-                        "required": true,
-                        "schema": {
-                            "type": "integer",
-                            "format": "int64"
-                        }
-                    }
-                ],
-                "requestBody": {
-                    "required": true,
-                    "content": {
-                        "application/json": {
-                            "schema": {
-                                "required": [
-                                    "username",
-                                    "password"
-                                ]
-                            },
-                            "example": {
-                                "name": "資訊管理部",
-                                "name_en": "IT",
-                                "status": 1,
-                                "type": 2,
-                                "parent": "管理處",
-                                "manager_id": 1
-                            }
-                        }
-                    }
-                },
-                "responses": {
-                    "200": {
-                        "$ref": "#/components/responses/200"
-                    },
-                    "400": {
-                        "$ref": "#/components/responses/400"
-                    },
-                    "401": {
-                        "$ref": "#/components/responses/401"
-                    }
-                },
-                "security": [
-                    {
-                        "Authorization": []
-                    }
-                ]
-            },
-            "delete": {
-                "tags": [
-                    "Department"
-                ],
-                "summary": "刪除部門資料",
-                "description": "刪除部門資料",
-                "operationId": "3402865b017c3332dce70fe0aaf5f79a",
-                "parameters": [
-                    {
-                        "name": "DepartmentId",
-                        "in": "path",
-                        "description": "部門ID",
-                        "required": true,
-                        "schema": {
-                            "type": "integer",
-                            "format": "int64"
-                        }
-                    }
-                ],
-                "responses": {
-                    "200": {
-                        "$ref": "#/components/responses/200"
-                    },
-                    "400": {
-                        "$ref": "#/components/responses/400"
-                    },
-                    "401": {
-                        "$ref": "#/components/responses/401"
-                    }
-                },
-                "security": [
-                    {
-                        "Authorization": []
-                    }
-                ]
-            }
-        },
-        "/login": {
-            "post": {
-                "tags": [
-                    "Employee"
-                ],
-                "summary": "登入",
-                "description": "Js-Adways3.0系統登入頁面",
-                "operationId": "7184e5a6e4516ccd27847482b267fa4a",
-                "requestBody": {
-                    "required": true,
-                    "content": {
-                        "application/json": {
-                            "schema": {
-                                "required": [
-                                    "username",
-                                    "password"
-                                ]
-                            },
-                            "example": {
-                                "username": "johnny.chang@js-adways.com.tw",
-                                "password": "123456"
-                            }
-                        }
-                    }
-                },
-                "responses": {
-                    "200": {
-                        "description": "請求成功",
-                        "headers": {
-                            "test": {
-                                "description": "Employee request ID",
-                                "schema": {
-                                    "type": "integer",
-                                    "format": "int64"
-                                }
-                            }
-                        },
-                        "content": {
-                            "application/json": {
-                                "schema": {},
-                                "example": {
-                                    "status": 200,
-                                    "data": {
-                                        "token": "eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9",
-                                        "system": [
-                                            {
-                                                "id": 1,
-                                                "name": "電子簽核系統"
-                                            },
-                                            {
-                                                "id": 2,
-                                                "name": "工單系統"
-                                            }
-                                        ]
-                                    }
-                                }
-                            }
-                        }
-                    },
-                    "400": {
-                        "$ref": "#/components/responses/400"
-                    },
-                    "401": {
-                        "$ref": "#/components/responses/401"
-                    }
-                },
-                "security": [
-                    {
-                        "Authorization": []
-                    }
-                ]
-            }
-        },
-        "/permission": {
-            "post": {
-                "tags": [
-                    "Employee"
-                ],
-                "summary": "取得權限",
-                "description": "選取子系統獲取個人權限",
-                "operationId": "3973f41638d3e5eabac15f48f71f1f73",
-                "requestBody": {
-                    "required": true,
-                    "content": {
-                        "application/json": {
-                            "schema": {
-                                "required": [
-                                    "username",
-                                    "password"
-                                ]
-                            },
-                            "example": {
-                                "status": 200,
-                                "data": {
-                                    "token": "eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJzdWIiOiIxMjM0NTY3ODkwIiwibmFtZSI6IkpvaG4gRG9lIiwiaWF0IjoxNTE2MjM5MDIyfQ.SflKxwRJSMeKKF2QT4fwpMeJf36POk6yJV_adQssw5c",
-                                    "system_id": 1
-                                }
-                            }
-                        }
-                    }
-                },
-                "responses": {
-                    "200": {
-                        "description": "請求成功",
-                        "headers": {
-                            "test": {
-                                "description": "Employee request ID",
-                                "schema": {
-                                    "type": "integer",
-                                    "format": "int64"
-                                }
-                            }
-                        },
-                        "content": {
-                            "application/json": {
-                                "schema": {},
-                                "example": {
-                                    "status": 200,
-                                    "data": {
-                                        "name": "Johnny",
-                                        "page": [
-                                            "系統管理",
-                                            "系統權限管理"
-                                        ],
-                                        "function": [
-                                            "系統管理編輯功能",
-                                            "系統管理查閱"
-                                        ]
-                                    }
-                                }
-                            }
-                        }
-                    },
-                    "400": {
-                        "$ref": "#/components/responses/400"
-                    },
-                    "401": {
-                        "$ref": "#/components/responses/401"
-                    }
-                },
-                "security": [
-                    {
-                        "Authorization": []
-                    }
-                ]
-            }
-        },
-        "/employee": {
-            "get": {
-                "tags": [
-                    "Employee"
-                ],
-                "summary": "員工列表",
-                "description": "Js-Adways員工列表",
-                "operationId": "276cb54e2c380d74dbfcf8ad495c9cd5",
-                "parameters": [
-                    {
-                        "name": "keyword",
-                        "in": "path",
-                        "description": "關鍵字， 姓名，職稱",
-                        "required": false,
-                        "schema": {
-                            "type": "string"
-                        }
-                    },
-                    {
-                        "name": "status",
-                        "in": "path",
-                        "description": "員工在職狀態",
-                        "required": false,
-                        "schema": {
-                            "type": "integer",
-                            "enum": [
-                                1,
-                                2,
-                                3,
-                                4
-                            ]
-                        }
-                    },
-                    {
-                        "name": "department",
-                        "in": "path",
-                        "description": "部門ID",
-                        "required": false,
-                        "schema": {
-                            "type": "integer",
-                            "enum": [
-                                1,
-                                2,
-                                3,
-                                4
-                            ]
-                        }
-                    }
-                ],
-                "responses": {
-                    "200": {
-                        "description": "請求成功",
-                        "headers": {
-                            "test": {
-                                "description": "Employee request ID",
-                                "schema": {
-                                    "type": "integer",
-                                    "format": "int64"
-                                }
-                            }
-                        },
-                        "content": {
-                            "application/json": {
-                                "schema": {},
-                                "example": {
-                                    "code": 200,
-                                    "data": [
-                                        {
-                                            "id": 1,
-                                            "name": "鄧雲澤",
-                                            "name_en": "van",
-                                            "job_title": "財務長",
-                                            "job_title_en": "Chief Financial Officer",
-                                            "status": 1
-                                        }
-                                    ]
-                                }
-                            }
-                        }
-                    },
-                    "400": {
-                        "$ref": "#/components/responses/400"
-                    },
-                    "404": {
-                        "$ref": "#/components/responses/404"
-                    },
-                    "405": {
-                        "$ref": "#/components/responses/405"
-                    }
-                },
-                "security": [
-                    {
-                        "Authorization": []
-                    }
-                ]
-            }
-        },
-        "/employee/{employeeId}": {
-            "patch": {
-                "tags": [
-                    "Employee"
-                ],
-                "summary": "更新員工資料",
-                "description": "更新員工資料包含部門,權限群組,緊急聯絡人",
-                "operationId": "f248527999d19b6165a5c363144bbe66",
-                "requestBody": {
-                    "required": true,
-                    "content": {
-                        "application/json": {
-                            "schema": {
-                                "required": [
-                                    "username",
-                                    "password"
-                                ]
-                            },
-                            "example": {
-                                "employee_id": 2,
-                                "employee_no": "A0002",
-                                "name": "財務長",
-                                "name_en": "Van",
-                                "birthday": "1977-09-03",
-                                "gender": 1,
-                                "id_number": "A188888888",
-                                "phone_number": "0977895561",
-                                "address": "110台北市信義區忠孝東路五段510號21樓",
-                                "email": "van@js-adways.com.tw",
-                                "job_title": "財務長",
-                                "job_title_en": "CFO",
-                                "start_date": "2006-01-01  00:00:00",
-                                "emergency_contact": [
-                                    {
-                                        "db_id": 2,
-                                        "name": "緊急聯絡人",
-                                        "phone_number": "0977289394",
-                                        "update_status": 0
-                                    }
-                                ],
-                                "department": [
-                                    {
-                                        "id": 1,
-                                        "start_date": "2006-01-01",
-                                        "end_date": null,
-                                        "update_status": 1
-                                    }
-                                ],
-                                "group": {
-                                    "create": [
-                                        1,
-                                        2
-                                    ],
-                                    "delete": [
-                                        4,
-                                        5
-                                    ]
-                                }
-                            }
-                        }
-                    }
-                },
-                "responses": {
-                    "200": {
-                        "description": "請求成功",
-                        "headers": {
-                            "test": {
-                                "description": "Employee request ID",
-                                "schema": {
-                                    "type": "integer",
-                                    "format": "int64"
-                                }
-                            }
-                        },
-                        "content": {
-                            "application/json": {
-                                "schema": {},
-                                "example": {
-                                    "status": 200,
-                                    "message": "成功"
-                                }
-                            }
-                        }
-                    },
-                    "400": {
-                        "$ref": "#/components/responses/400"
-                    },
-                    "401": {
-                        "$ref": "#/components/responses/401"
-                    }
-                },
-                "security": [
-                    {
-                        "Authorization": []
-                    }
-                ]
-            }
-        },
         "/delivery_notify": {
             "post": {
                 "tags": [
